AddRentController jobb inputellenőrzés